--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@qatools/ts-module-poc",
   "version": "1.0.0",
-  "description": "TypeScript module",
+  "description": "POC: TypeScript module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "pack-dry": "npm pack --dry-run",
     "build": "tsc",
+    "pack-dry": "npm pack --dry-run",
     "publish": "npm publish --access public"
   },
   "repository": {
@@ -23,9 +23,6 @@
   "dependencies": {
     "@types/chai": "^4.3.6",
     "chai": "^4.3.8"
-  },
-  "bin": {
-    "ts-module-poc": "bin/Test.js"
   },
   "devDependencies": {
     "typescript": "^5.2.2"
